@startuml
!include clases/clase_juego.plantuml
!include clases/clase_gestorTurnos.plantuml
!include clases/clase_jugador.plantuml
!include clases/clase_mapa.plantuml
!include clases/parser/clase_parser.plantuml

!include clases/clase_gladiador.plantuml
!include clases/clase_dado.plantuml

!include clases/seniority/diagrama_seniority.plantuml
!include clases/equipamiento/diagrama_equipamiento_actual.plantuml
!include clases/estado/diagrama_estado.plantuml
!include clases/casilla/diagrama_casilla.plantuml

class CasillaInicio {
  + CasillaInicio(Coordenada, iCasilla):
  - gladiadoresEnLaCasilla: List<Gladiador>
  - casillaSiguiente: iCasilla
  - coordenada: Coordenada
  + esContigua(iCasilla): boolean
  + getCoordenada(): Coordenada
  + agregarObserver(Observer): void
  + recibir(Gladiador): void
  + buscadoEstaEnLaCasilla(Gladiador): iCasilla
  + setSiguiente(iCasilla): void
  + getObstaculo(): Obstaculo
  + getPremio(): Premio
  + moverGladiador(int, Gladiador): void
  + esContigua(Coordenada): boolean
  + getGladiadores(): List<Gladiador>
  + expulsar(Gladiador): void
  + validarPosicionEnCamino(int, int): void
}

class CasillaFinal {
  + CasillaFinal(Coordenada):
  - casillaSiguiente: iCasilla
  - coordenada: Coordenada
  - gladiadoresEnLaCasilla: List<Gladiador>
  + buscadoEstaEnLaCasilla(Gladiador): iCasilla
  + esContigua(Coordenada): boolean
  + getObstaculo(): Obstaculo
  + recibir(Gladiador): void
  + validarPosicionEnCamino(int, int): void
  + expulsar(Gladiador): void
  + getCoordenada(): Coordenada
  + getPremio(): Premio
  + setSiguiente(iCasilla): void
  + moverGladiador(int, Gladiador): void
  + getGladiadores(): List<Gladiador>
  + esContigua(iCasilla): boolean
  + agregarObserver(Observer): void
}


class Log {
  - mensajeAImprimir:String
  - {static} construirLogger(): void
  + {static} obtenerLogger(): Logger
  + {static} getLog()
  + imprimirMensaje(): void
  + agregarABuffer(String): void
   - instancia: Log
}

class LogFormatter {
  + LogFormatter():
  - calcularFecha(long): String
  + format(LogRecord): String
}

Log .>  LogFormatter

interface iMapa << interface >> {
  + ingresarGladiadores(List<Gladiador>, int): void
  + getLargo(): int
  + getCasillas(): List<iCasilla>
  + moverGladiador(Gladiador, int): void
  + getAncho(): int
  + enviarAMitad(Gladiador): void
}



interface iJugador << interface >> {
  + jugar(iDado, iMapa): void
  + getNombre(): String
  + getGladiador(): Gladiador
}



interface iDado {
    public int lanzar();
}


iCasilla ^-. CasillaInicio
iCasilla ^-. CasillaFinal
Juego o- iMapa
iMapa <|-. Mapa
Mapa .-> Gladiador
Juego o-- iGestorTurnos
Juego o- iDado
iDado <|. Dado
GestorTurnos o-- "2..6 " iJugador
iJugador <|-. Jugador
Jugador *-- Gladiador
Jugador ..> iDado
Jugador ...> iMapa

Coordenada <-- CasillaFinal
Coordenada <- CasillaInicio


Mapa o-- "2..*"iCasilla
iCasilla o- "0..6 " Gladiador

Gladiador o-- ISeniority
Gladiador o- IEquipamiento
Gladiador o-- Estado

Parser .--> iCasilla


interface ISeniority <<interface>> {
}


interface IEquipamiento <<interface>> {

}

@enduml
